Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_chomp_bang): coderange may change.
	  [ruby-core:22414]

Wed Feb 25 02:17:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_delete_bang): should recalculate coderange.
	  [ruby-talk:329267]

Tue Feb 24 19:01:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (main): split from exts and makes main program after
	  building exts with miniruby, to get rid of overwriting running
	  program.  [ruby-core:22339]

	* Makefile.in, win32/Makefile.sub (RUNCMD, MKMAIN_CMD): macros to
	  run script file.

	* ext/extmk.rb (parse_args): added --command-output option which
	  creates script file to make main program.

Tue Feb 24 17:58:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ripper.c): exec can't work on Windows.

	* ext/ripper/depend (.SUFFIXES): nmake doesn't have .y by default.

	* Makefile.in (id.h): overwrites unconditinally.

Tue Feb 24 13:13:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/vsnprintf.c (BSD_vfprintf): ptrdiff_t may be larger than
	  long.

Tue Feb 24 10:49:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_waitpid): last argument was missing.

	* process.c (waitall_each): fixed typo.  a patch from shinichiro.h
	  <shinichiro.hamaji AT gmail.com> at [ruby-dev:38054].

Tue Feb 24 01:22:19 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_thread.rb: fix for environment where fork is not
	  available.

Tue Feb 24 01:19:38 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (thread_cleanup_func): unlock all locked mutexes even when
	  forking.  [ruby-core:22269]

Mon Feb 23 14:47:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (mv): added description for the case of
	  different partitions.  [ruby-talk:329072]

Sun Feb 22 22:42:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should recalculate coderange.