@@ -1,3 +1,8 @@
+Wed Feb 25 12:06:09 2009    <nobu@ruby-lang.org>
+
+	* io.c (rb_io_getline_1): enables limit even if rs is given.
+	  [ruby-core:22434]
+
 Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_chomp_bang): coderange may change.
